5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1596_1016.log
== SUBMITION (2019-04-02 08:51:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
1ta=float(input("comprimento a: "))
1tb=float(input("comprimento b: "))
1tc=float(input("comprimento c:"))
semiperimetro=(1ta+1tb+1tc)/2
from math import sqrt
area_do_triangulo=semiperimetro*(semiperimetro-1ta)*(semiperimetro-1tb)*(semiperimetro-1tc)
print(round(area_do_triangulo))
-- EXECUTION TIME:
0.207548
-- ERROR:
  File "/home/codebench/codes/1596/1016/main.py", line 4
    1ta=float(input())
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:51:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
1ta=float(input("comprimento a: "))
1tb=float(input("comprimento b: "))
1tc=float(input("comprimento c:"))
semiperimetro=(1ta+1tb+1tc)/2
from math import sqrt
area_do_triangulo=semiperimetro*(semiperimetro-1ta)*(semiperimetro-1tb)*(semiperimetro-1tc)
print(round(area_do_triangulo))
-- ERROR:
File "XXXX", line 4
    1ta=float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:51:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
1ta=float(input("comprimento a: "))
1tb=float(input("comprimento b: "))
1tc=float(input("comprimento c:"))
semiperimetro=(1ta+1tb+1tc)/2
from math import sqrt
area_do_triangulo=semiperimetro*(semiperimetro-1ta)*(semiperimetro-1tb)*(semiperimetro-1tc)
print(round(area_do_triangulo))
-- ERROR:
File "XXXX", line 4
    1ta=float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:51:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
1ta = float(input("comprimento a: "))
1tb=float(input("comprimento b: "))
1tc=float(input("comprimento c:"))
semiperimetro=(1ta+1tb+1tc)/2
from math import sqrt
area_do_triangulo=semiperimetro*(semiperimetro-1ta)*(semiperimetro-1tb)*(semiperimetro-1tc)
print(round(area_do_triangulo))
-- ERROR:
File "XXXX", line 4
    1ta = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:52:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(1ta+1tb+1tc)/2
from math import sqrt
area_do_triangulo=semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo))
-- EXECUTION TIME:
0.126328
-- ERROR:
  File "/home/codebench/codes/1596/1016/main.py", line 7
    semiperimetro=(1ta+1tb+1tc)/2
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:52:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(1ta+1tb+1tc)/2
from math import sqrt
area_do_triangulo=semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo))
-- ERROR:
File "XXXX", line 7
    semiperimetro=(1ta+1tb+1tc)/2
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:52:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo=semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo))
-- OUTPUT:
4819
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:53:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo=semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo))
-- EXECUTION TIME:
0.186234
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
4819
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
360000
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
502917
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:53:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo=semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- EXECUTION TIME:
0.175361
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
4819.09124
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
360000.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
502917.1875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:53:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo=semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- OUTPUT:
4819.09124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:08:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- OUTPUT:
4819.09124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:08:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- EXECUTION TIME:
0.200519
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
4819.09124
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
360000.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
502917.1875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:10:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- EXECUTION TIME:
0.141618
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
4819.09124
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
360000.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
502917.1875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:11:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- OUTPUT:
4819.09124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:11:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- OUTPUT:
4819.09124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:11:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- EXECUTION TIME:
0.21302
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
4819.09124
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
360000.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
502917.1875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:17:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- EXECUTION TIME:
0.131094
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
4819.09124
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
360000.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
502917.1875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:17:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- OUTPUT:
4819.09124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:18:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt()
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- EXECUTION TIME:
0.184223
-- ERROR:
  File "/home/codebench/codes/1596/1016/main.py", line 8
    from math import sqrt()
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:18:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt()
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- ERROR:
File "XXXX", line 8
    from math import sqrt()
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:18:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- OUTPUT:
4819.09124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:18:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print(round(area_do_triangulo,5))
-- EXECUTION TIME:
0.165263
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
4819.09124
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
360000.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
502917.1875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:25:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print round(area_do_triangulo,5)
-- ERROR:
File "XXXX", line 10
    print round(area_do_triangulo,5)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:25:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print (round(area_do_triangulo,5))
-- OUTPUT:
4819.09124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:25:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print (round(area_do_triangulo,5))
-- EXECUTION TIME:
0.129754
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
4819.09124
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
360000.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
502917.1875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:13:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import sqrt
area_do_triangulo= semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc)
print (round(area_do_triangulo,5))
-- EXECUTION TIME:
0.18649
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
4819.09124
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
360000.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
502917.1875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:57:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ita = float(input("comprimento a: "))
itb=float(input("comprimento b: "))
itc=float(input("comprimento c:"))
semiperimetro=(ita+itb+itc)/2
from math import *
area_do_triangulo= sqrt(semiperimetro*(semiperimetro-ita)*(semiperimetro-itb)*(semiperimetro-itc))
print (round(area_do_triangulo,5))
-- EXECUTION TIME:
0.151013
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
